kubernetes/home/apps/networking/traefik/external-ingresses/file-browser-truenas.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: file-browser
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.shaklab.com`, `file-browser.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: file-browser
          port: 30044
  tls:
    secretName: shaklab-com-tls-certs
---
# NOT WORKING
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: file-browser-shares
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.shaklab.com`, `file-browser.shaklab.com`) && PathPrefix(`/share`, `/static`, `/api/public/{share|dl}`) # Allow share publicly
      kind: Rule
      services:
        - name: file-browser
          port: 30044
  tls:
    secretName: shaklab-com-tls-certs
---
apiVersion: v1
kind: Service
metadata:
  name: file-browser
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: files.shaklab.com, file-browser.shaklab.com
    external-dns.alpha.kubernetes.io/target: ipv4.shaklab.com
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 30044
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: file-browser
  namespace: default
subsets:
  - addresses:
    - ip: 10.10.0.3
    ports:
      - name: http
        port: 30044
        protocol: TCP
