kubernetes/home/apps/networking/traefik/external-ingresses/home-assistant.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass.shaklab.com`, `home-assistant.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: shaklab-com-tls-certs
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hass.shaklab.com, home-assistant.shaklab.com
    external-dns.alpha.kubernetes.io/target: ipv4.shaklab.com
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8123
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: default
subsets:
  - addresses:
    - ip: 10.10.0.5
    ports:
      - name: web
        port: 8123
        protocol: TCP
