kubernetes/home/apps/networking/traefik/external-ingresses/synology-nas.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: synology-nas
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nas.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth-no-ratelimit
      services:
        - name: synology-nas
          port: 5000
  tls:
    secretName: shaklab-com-tls-certs
---
apiVersion: v1
kind: Service
metadata:
  name: synology-nas
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nas.shaklab.com
    external-dns.alpha.kubernetes.io/target: ipv4.shaklab.com
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 5000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: synology-nas
  namespace: default
subsets:
  - addresses:
    - ip: 10.10.0.2
    ports:
      - name: web
        port: 5000
        protocol: TCP
