kubernetes/home/apps/networking/traefik/external-ingresses/transmission-nas.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: transmission-nas
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`transmission.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: transmission-nas
          port: 9091
  tls:
    secretName: shaklab-com-tls-certs
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-nas
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9091
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: transmission-nas
  namespace: default
subsets:
  - addresses:
    - ip: 10.10.0.2
    ports:
      - name: web
        port: 9091
        protocol: TCP
