kubernetes/home/apps/networking/traefik/external-ingresses/truenas.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tnas.shaklab.com`, `truenas.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: truenas
          port: 81
  tls:
    secretName: shaklab-com-tls-certs
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tnas.shaklab.com, truenas.shaklab.com
    external-dns.alpha.kubernetes.io/target: ipv4.shaklab.com
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 81
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: default
subsets:
  - addresses:
    - ip: 10.10.0.3
    ports:
      - name: web
        port: 81
        protocol: TCP
